# flowdapt

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/: default.yml  release.yml  stable.yml  templates.yml
charts/docs/: Chart.yaml  values.yaml
charts/docs/templates/: _helpers.tpl  configmap.yml  deployment.yml  ingress.yml  middleware.yml  service.yml
docker/: base.Dockerfile  complete.Dockerfile  docs.Dockerfile  gpu.Dockerfile
docs/: getting_started.md  index.md
docs/advanced/visualize/: dashboard.md  tensorboard.md
docs/concepts/configs/: index.md
docs/concepts/executor/: dask.md  index.md  local.md  ray.md
docs/concepts/plugins/: index.md  testing.md  user_modules.md
docs/concepts/triggers/: actions.md  index.md  rules.md
docs/concepts/workflows/: context.md  index.md  object_storage.md  stages.md
docs/development/: architecture.md  contributor_guide.md  debugging.md
docs/examples/: nowcast.md  paperboy.md  rayvsdask.md
docs/flowctl/: cli.md  index.md
docs/flowml/: index.md  pipefill.md  pipeline.md
docs/reference/: cli.md  configuration.md
docs/reference/api/: index.html  openapi.json
docs/reference/database/: memory.md  mongodb.md  tinydb.md
docs/stylesheets/: extra.css
example/: complete.yaml  compute-dask.yaml  compute-ray.yaml  mongodb.yml  storage.yaml  telemetry.yaml
example/shared/: grafana-datasources.yaml  otelcol.yaml  prometheus.yaml  tempo.yaml
flowdapt/: __init__.py  __main__.py
flowdapt/builtins/: utils.py
flowdapt/cli/: __init__.py  _internal.py  config.py  db.py  dev.py  main.py  run.py  utils.py
flowdapt/compute/: object_store.py  service.py  utils.py
flowdapt/compute/artifacts/: __init__.py  interface.py  misc.py
flowdapt/compute/artifacts/dataset/: __init__.py  arrays.py  dataframes.py  handler.py  utils.py
flowdapt/compute/cluster_memory/: __init__.py  base.py  utils.py
flowdapt/compute/domain/dto/: __init__.py
flowdapt/compute/domain/dto/v1/: config.py  workflow.py  workflowrun.py
flowdapt/compute/domain/events/: workflow.py
flowdapt/compute/domain/models/: config.py  workflow.py  workflowrun.py
flowdapt/compute/executor/: base.py
flowdapt/compute/executor/dask/: __init__.py  cluster_memory.py  collections.py  executor.py  gpu_cluster.py  plugins.py
flowdapt/compute/executor/local/: __init__.py  cluster_memory.py  executor.py
flowdapt/compute/executor/ray/: __init__.py  cluster_memory.py  executor.py  utils.py
flowdapt/compute/resources/config/: methods.py
flowdapt/compute/resources/workflow/: context.py  errors.py  execute.py  graph.py  methods.py  stage.py  utils.py
flowdapt/compute/rpc/: __init__.py  config.py  workflow.py
flowdapt/core/: service.py
flowdapt/core/domain/dto/: __init__.py
flowdapt/core/domain/dto/v1/: metrics.py  plugin.py  status.py
flowdapt/core/domain/events/: plugin.py
flowdapt/core/domain/models/: status.py
flowdapt/core/rpc/: __init__.py  drain.py  metrics.py  plugin.py  status.py
flowdapt/lib/: config.py  context.py  enum.py  errors.py  logger.py  service.py  telemetry.py
flowdapt/lib/database/: __init__.py  annotations.py  base.py  errors.py  migrate.py  utils.py
flowdapt/lib/database/revisions/: a83edd00_add_workflow_run_source.py  cec3ffd4_initial_setup.py
flowdapt/lib/database/storage/: mdb.py  memory.py  tdb.py
flowdapt/lib/database/tpls/: revision.tpl
flowdapt/lib/domain/dto/: __init__.py  protocol.py  utils.py
flowdapt/lib/domain/dto/v1/: base.py
flowdapt/lib/domain/models/: __init__.py  base.py
flowdapt/lib/plugins/: __init__.py  interface.py  utils.py
flowdapt/lib/rpc/: __init__.py  rpc.py  version.py
flowdapt/lib/rpc/api/: __init__.py  dependencies.py  exception_handlers.py  server.py  utils.py
flowdapt/lib/rpc/api/middleware/: logging.py  readiness.py  telemetry.py
flowdapt/lib/rpc/eventbus/: __init__.py  bus.py  callback.py  event.py  stream.py
flowdapt/lib/rpc/eventbus/brokers/: __init__.py  base.py  memory.py  rabbitmq.py
flowdapt/lib/serializers/: __init__.py  base.py  jsons.py  msgpacks.py  noop.py  pickles.py  yamls.py
flowdapt/lib/utils/: asynctools.py  definitions.py  di.py  misc.py  model.py  taskset.py  versions.py
flowdapt/lib/utils/mixins/: active_record.py
flowdapt/triggers/: service.py
flowdapt/triggers/domain/dto/: __init__.py
flowdapt/triggers/domain/models/: triggerrule.py
flowdapt/triggers/resources/triggers/: actions.py  conditions.py  cron.py  methods.py
flowdapt/triggers/rpc/: __init__.py  triggers.py
tests/: conftest.py
tests/builtins/: test_utils.py
tests/compute/: dummy_workflow_stages.py  test_object_store.py
tests/compute/artifacts/: test_init.py  test_interface.py
tests/compute/artifacts/dataset/: test_arrays.py  test_dataframes.py  test_handler.py  test_misc.py  test_utils.py
tests/compute/executor/dask/: test_collections.py  test_dask_cluster_memory.py  test_dask_executor.py
tests/compute/executor/local/: test_local_cluster_memory.py  test_local_executor.py
tests/compute/executor/ray/: test_ray_cluster_memory.py  test_ray_executor.py
tests/compute/workflow/: test_execute.py  test_methods.py
tests/lib/database/: test_base.py  test_migrate.py
tests/lib/database/test_revisions/: 3a59d747_revision_two.py  50bfe794_revision_one.py
tests/lib/serializers/: test_jsons.py  test_noop.py  test_pickles.py  test_yamls.py
(+1 files in other folders)
