[project]
name = "flowdapt"
version = "0.1.22"
description = "A generalized framework for robust modular deployments of large-scale, real-time adaptive modeling on chaotic data."
readme = "README.md"
authors = [
    {name = "Emergent Methods, LLC", email = "contact@emergentmethods.ai"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "rich>=13.7.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "typer==0.15.2",
    "orjson==3.10.15",
    "dask[dataframe,diagnostics,distributed]==2025.2.0",
    "ray[default]==2.43.0",
    "async-timeout>=4.0.3",
    "pandas>=2.0.2",
    "numpy>=1.26.4",
    "cloudpickle==3.1.1",
    "pyarrow>=15.0.0",
    "llvmlite>=0.43.0",
    "python-multipart>=0.0.6",
    "coolname>=2.2.0",
    "python-dotenv>=1.0.0",
    "crontab>=1.0.1",
    "python-rapidjson>=1.10",
    "pynvml>=12.0.0",
    "semver==3.0.4",
    "aiosonic>=0.16.1",
    "asynctempfile>=0.5.0",
    "gpustat==1.1.1",
    "dill>=0.3.6",
    "cryptography>=40.0.2",
    "structlog>=23.1.0",
    "opentelemetry-api==1.30.0",
    "opentelemetry-sdk==1.30.0",
    "opentelemetry-exporter-otlp==1.30.0",
    "opentelemetry-instrumentation-asgi>=0.51b0",
    "opentelemetry-instrumentation-system-metrics>=0.51b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
    "opentelemetry-exporter-otlp-proto-http==1.30.0",
    "tinydb>=4.8.0",
    "aiotinydb>=2.0.0",
    "motor>=3.3.1",
    "tinydb-serialization>=2.1.1",
    "fastapi==0.115.10",
    "pydantic>=2.5.3",
    "python-manifest>=2.2.3",
    "pytimeparse>=1.1.8",
    "s3fs>=2023.12.1",
    "pympler>=1.0.1",
    "anyio>=4.8.0",
]

[project.scripts]
flowdapt = "flowdapt.cli:cli"

[dependency-groups]
dev = [
    "autopep8>=2.0.1",
    "pre-commit>=3.1.1",
    "pytest>=7.2.2",
    "mypy>=0.991",
    "pytest-asyncio>=0.20.3",
    "coverage>=7.2.1",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.1.0",
    "pytest-mock>=3.10.0",
    "mkdocs-click>=0.8.0",
    "types-pyyaml>=6.0.12.9",
    "mkdocstrings[python]==0.28.2",
    "docdantic==0.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
exclude = ["tests", "flowdapt/lib/database/migrate"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E226", "E302", "E722", "E731"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = "True"
log_auto_indent = "False"

[tool.coverage.run]
source = ["flowdapt"]

[tool.coverage.report]
ignore_errors = "true"

[tool.coverage.xml]
output = "coverage.xml"